--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ form{
     justify-content: space-evenly;
 }
 
-@media only screen and (max-width: 650px or max-height: 500px){
+@media only screen and (max-width: 650px) and (max-height: 500px){
     #principal{
         display: flex;
         border: none;
